--- a/01_intro_AI_on_Supercomputer/2024-02-06_Heyi_Liang_01_linear_regression_sgd.ipynb
+++ b/01_intro_AI_on_Supercomputer/2024-02-06_Heyi_Liang_01_linear_regression_sgd.ipynb
@@ -1012,6 +1012,24 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "According to the figures, it is obvious that the loss function fails to converge when the learning rate becomes larger than (1e-7, 1e-1)*4 for all batch sizes."
+      ],
+      "metadata": {
+        "id": "kGkLyqL_Sz30"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BVDmlYkUTK3T"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
